# pasm

./: .gitignore  Cargo.toml  build.sh  ins_switch.rs  install.sh  instradd.sh  justfile  main.asm  perf.md  readme.md  roadmap.md
.github/ISSUE_TEMPLATE/: bug_report.md  deprecation.md  documentation.md  feature-request-change.md  feature_request.md  question.md
docs/: core.md  elf.md  encoding-evex.md  encoding-vex.md  encoding-x86.md  error-spec.md  extending-pasm.md  extending-rasm.md  readme.md  syntax-apx.md  syntax-avx512.md  syntax-std.md  syntax.md
examples/: 00_hello_world.asm  01_hello_world_wstrlen.asm
ins_adder/: Cargo.toml
ins_adder/src/: main.rs
src/: cli.rs  color.rs  conf.rs  consts.rs  global.rs  help.rs  libp.rs  libr.rs  main.rs  utils.rs
src/core/: api.rs  apx.rs  avx.rs  comp.rs  disp.rs  evex.rs  mmx.rs  mod.rs  modrm.rs  opcode.rs  reloc.rs  rex.rs  sib.rs  sse.rs  sse2.rs  sse3.rs  sse4.rs  ssse3.rs  vex.rs
src/frontend/: instruction.rs  label.rs  lexer.rs  mod.rs  parser.rs  register.rs  tokenizer.rs
src/hlp/: main.txt
src/pre/: chk.rs  chkn.rs  lex.rs  mer.rs  mod.rs  par.rs  tok.rs
src/pre_core/: math.rs  mod.rs
src/shr/: ast.rs  atype.rs  booltable.rs  dir.rs  error.rs  ins.rs  ins_switch.rs  instruction.rs  kwd.rs  label.rs  location.rs  math.rs  mem.rs  mnemonic.rs  mod.rs  num.rs  reg.rs  reloc.rs  rpanic.rs  section.rs  segment.rs  semaphore.rs  size.rs  smallvec.rs  stackvec.rs  symbol.rs  var.rs  visibility.rs
tests/: test-no-xxd.sh  test-xxd.sh  test.sh
tests/elf/: test.asm
tests/nasm/: adc.asm  add.asm  addt.asm  aes.asm  and.asm  avx-ext-0.asm  avx-ext1.asm  avx-mmx-part1.asm  avx-mmx-part2.asm  avx-part2a.asm  avx-part2b.asm  avx-part2c-ext.asm  avx-part2c.asm  avx-sse3.asm  avx-sse4-part-2.asm  avx-sse4-part2.asm  avx-sse4-part3.asm  avx-sse4.asm  cmovcc.asm  cmp.asm  cvt-part1.asm  cvt-part2.asm  er.asm  eval.asm  fma-part1.asm  fma-part2.asm  fma-part3.asm  imul.asm  incdec.asm  (+72 more)
(+199 files in other folders)
