[package]
name = "pasm"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["ins_adder"]

[dependencies]

[features]
default = ["target_all", "mthread", "time", "iinfo"]
# measure time for assembling
time = []
# verbose timing (aka benchmark)
# individual timing for: parsing, checking and assembling
vtime = ["time"]
# instruction info
# takes extra space, because of `Mnemonic::to_string()`
iinfo = []
target_all = ["target_elf"]
target_elf= []

# should not be used
refresh = ["iinfo"]

[profile.testing]
inherits = "release"
opt-level = 0
lto = false
codegen-units = 256
incremental = true
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
