[package]
name = "pasm"
version = "1.0.0"
edition = "2021"

[workspace]
members = ["ins_adder"]

[dependencies]

[features]
default = ["target_elf", "iinfo"]
# instruction info
# takes extra space, because of `Mnemonic::to_string()`
iinfo = []
target_elf = []

# should not be used
refresh = ["iinfo"]

[profile.testing]
inherits = "release"
opt-level = 0
lto = false
codegen-units = 256
incremental = true
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
